--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
       <div class="quote-box pl-5 pr-5 wow bounceInRight">
         <h2> Dança do  <br><span>Ventre</span> </h2>
       </div>
-      <a href="https://forms.gle/gkZGhSQmHLWS7phL9" class="btn text-uppercase btn-outline-danger btn-lg mr-3 mb-3 wow bounceInUp">Agende suas Aulas</a> 
+     
+
+<a href="https://api.whatsapp.com/send?phone=85988890071" target="_blank" class="neon-button">Agende suas Aulas</a>
+
       <a href="https://forms.gle/GVWu2FLqzDdMXsgu7" class="btn text-uppercase btn-outline-danger btn-lg mb-3 wow bounceInDown">Beneficios</a> </div>
   </div>
 </div>
