--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
      
 
-<a href="https://api.whatsapp.com/send?phone=+5585988890071" target="_blank" class="neon-button">Agende suas Aulas</a>
+<a href="https://api.whatsapp.com/send?phone=5585988890071" target="_blank" class="neon-button">Agende suas Aulas</a>
 
       <a href="https://forms.gle/GVWu2FLqzDdMXsgu7" class="btn text-uppercase btn-outline-danger btn-lg mb-3 wow bounceInDown">Beneficios</a> </div>
   </div>
