--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       </div>
      
 
-<a href="https://api.whatsapp.com/send?phone=5585988890071" target="_blank" class="neon-button">Agende suas Aulas</a>
+<a href="https://api.whatsapp.com/send?phone=85988890071" target="_blank" class="neon-button">Agende suas Aulas</a>
 
-      <a href="https://forms.gle/GVWu2FLqzDdMXsgu7" class="btn text-uppercase btn-outline-danger btn-lg mb-3 wow bounceInDown">Beneficios</a> </div>
+      <a href="#beneficios" class="btn text-uppercase btn-outline-danger btn-lg mb-3 wow bounceInDown">Beneficios</a> </div>
   </div>
 </div>
 <div class="container-fluid fh5co-network">
@@ -90,7 +90,7 @@
       </div>
   </div>
 </div>
-<div class="container-fluid fh5co-content-box">
+<div  class="container-fluid fh5co-content-box">
   <div class="container">
     <div class="row">
       <div class="col-md-5 pr-0"><img src="images/brunadanca2.png" alt="gym" class="img-fluid wow bounceInLeft" /> </div>
@@ -108,7 +108,7 @@
           
         </div>
       </div>
-      <div class="col-md-6 pr-5 pl-5">
+      <div id="beneficios" class="col-md-6 pr-5 pl-5">
         <div class="card text-center wow bounceInLeft" data-wow-delay=".25s"> <img class="card-img-top rounded-circle img-fluid" src="images/ventre5.jpg" alt="Card image">
           <div class="card-body mb-5">
             <h4 class="card-title">CORPO E MENTE</h4>
