--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div  class="container-fluid fh5co-content-box">
   <div class="container">
     <div class="row">
-      <div class="col-md-5 pr-0"><img src="images/brunadanca22.png" alt="gym" class="img-fluid wow bounceInLeft" /> </div>
+      <div class="col-md-5 pr-0"><img src="images/brunadanca22.jpeg" alt="gym" class="img-fluid wow bounceInLeft" /> </div>
       <div class="col-md-7 pl-0">
         <div class="wow bounceInRight" data-wow-delay=".25s">
           <div class="card-img-overlay">
