--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <td colspan="2"></td>
             </tr>
             <tr>
-              <td colspan="2"><input type="text" class="form-control pl-0" placeholder="MESSAGES" /></td>
+              <td colspan="2"><input type="text" class="form-control pl-0" placeholder="whatsapp"></td>
             </tr>
             <tr>
               <td colspan="2"></td>
