--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h4 class="wow bounceInUp">Aprenda Dança do Ventre  </h4>
-        <h2 class="wow bounceInRight">com a professora Bruna Trevisan </h2>
-        <hr />
-        <h5 class="wow bounceInLeft">Deixe florecer sua feminilidade</h5>
-        <p class="wow bounceInDown">Agende sua aula</p>
+         <span style="color: pink;">Aprenda Dança do Ventre</span>
+        <h2 class="wow bounceInRight" style="visibility: visible; animation-name: bounceInRight;">com a professora Bruna Trevisan </h2>
+        <hr>
+        <h5 class="wow bounceInLeft" style="visibility: visible;color: pink; animation-name: bounceInLeft;">Deixe florecer sua feminilidade</h5>
+        <p class="wow bounceInDown" style="visibility: visible; color: pink;animation-name: bounceInDown;">Agende sua aula</p>
       </div>
       <div class="col-md-6">
         <figure class="wow bounceInDown"> <img src="images/brunadanca1.png" alt="gym" class="img-fluid" /> </figure>
