--- a/index.html
+++ b/index.html
@@ -157,19 +157,25 @@
   </div>
 </div>
 
-
-
-<div style="text-align: center;">
-<iframe width="800" height="450" src="https://www.youtube.com/embed/jKCH18mlEFY" frameborder="0" allowfullscreen></iframe>
-
+	<div style="text-align: center;">
+  <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
+    <iframe src="https://www.youtube.com/embed/jKCH18mlEFY" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
+
+
+
+
 	<br>
 <br>
-
 <div style="text-align: center;">
-<iframe width="800" height="450" src="https://www.youtube.com/embed/NLHvjMIwQqg" frameborder="0" allowfullscreen></iframe>
-
+  <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
+    <iframe src="https://www.youtube.com/embed/NLHvjMIwQqg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
+
+	
+
 
 
    
