--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
   </div>
 </div>
-  <h4 style="visibility: visible;color: pink; animation-name: bounceInLeft;" class="card-title">Apresentação das águas</h4>
+  <h4 style="visibility: visible;color: pink; animation-name: bounceInLeft;" class="card-title">Coreografia Caminho  das Águas</h4>
 	<div style="text-align: center;">
   <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
     <iframe src="https://www.youtube.com/embed/jKCH18mlEFY" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allowfullscreen></iframe>
@@ -168,7 +168,7 @@
 
 	<br>
 <br>
-	 <h4 style="visibility: visible;color: pink; animation-name: bounceInLeft;" class="card-title">Apresentação das espadas</h4>
+	 <h4 style="visibility: visible;color: pink; animation-name: bounceInLeft;" class="card-title">Coreografia Said</h4>
 <div style="text-align: center;">
   <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
     <iframe src="https://www.youtube.com/embed/NLHvjMIwQqg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allowfullscreen></iframe>
