--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p class="wow bounceInDown" style="visibility: visible; color: pink;animation-name: bounceInDown;">Agende sua aula</p>
       </div>
       <div class="col-md-6">
-        <figure class="wow bounceInDown"> <img src="images/brunadanca1.png" alt="gym" class="img-fluid" /> </figure>
+        <figure class="wow bounceInDown"> <img src="images/brunadanca22.jpeg" alt="gym" class="img-fluid" /> </figure>
       </div>
     </div>
   </div>
@@ -93,7 +93,7 @@
 <div  class="container-fluid fh5co-content-box">
   <div class="container">
     <div class="row">
-      <div class="col-md-5 pr-0"><img src="images/brunadanca22.jpeg" alt="gym" class="img-fluid wow bounceInLeft" /> </div>
+      <div class="col-md-5 pr-0"><img src="images/bruna-danca13.gif" alt="gym" class="img-fluid wow bounceInLeft" /> </div>
       <div class="col-md-7 pl-0">
         <div class="wow bounceInRight" data-wow-delay=".25s">
           <div class="card-img-overlay">
