--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="card-img-overlay">
             
           </div>
-          <img src="images/brunadanca3.png" alt="girls in gym" class="img-fluid" /> </div>
+          <img src="images/bruna-de-preto.jpeg" alt="girls in gym" class="img-fluid" /> </div>
       </div>
     </div>
     <div class="row trainers pl-0 pr-0">
