--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <h4 class="card-title">AS AULAS</h4>
             <p class="card-text">As aulas são dinâmicas e podem ser praticadas de diferentes formas, entretanto, a natureza da dança constitui-se em conduzir quadris e braços  de modo a acompanhar as batidas das músicas, harmonizando os movimentos. </p>
           </div>
-          <img class="card-img-top img-fluid wow bounceInLeft" data-wow-delay=".25s" src="images/ventre9.jpg" alt="Card image"> </div>
+          <img class="card-img-top img-fluid wow bounceInLeft" data-wow-delay=".25s" src="images/bruna-cachoeira.jpg" alt="Card image"> </div>
       </div>
     </div>
   </div>
